css/base.css
/* ... */
.als-window-button-container .als-button-base {
	border: none;
}

/* Layers */
.als-layer-container {
	width: 100%;
}

.als-layer-menu[data-hidden="0"] {
	border-bottom: var(--border);
}

div.als-layer-menu.als-only-one-layer { /* Don't add border when there's only one layer */
	border: none;
}

.als-layer-container > .als-items-row {
	border: none;
	border-bottom: var(--border);
	transition: background 0.3s;
}

.not-mobile .als-layer-container > .als-items-row:hover {
	background: var(--hover-bg);
	transition: background 0.3s;
}

.als-layer-container[data-is-selected = "1"] > .als-items-row,
.not-mobile .als-layer-container[data-is-selected = "1"] > .als-items-row:hover {
	background: var(--fixed-element-selected-bg);
	transition: background 0.3s;
}

.als-layer-label {
	/*display: inline-block;*/
	vertical-align: middle;
	display: flex;
	align-items: center;
	width: 10.7rem;
	height: 2rem;
	margin: 0;
	white-space: nowrap;
	overflow: hidden;
	padding-left: 0.2rem;
	padding-right: 0.2rem;
}

.als-layer-label[contenteditable = "true"] {
	text-decoration: underline;
}

.als-layer-handle {
	cursor: move;
}

.als-layer-menu {
	display: block;
	width: 100%;
	border: none;
}

.als-widget-row {
	display: block; /* Hack for older browsers */
	display: flex;
	flex-flow: row wrap;
	align-items: center;
	box-sizing: border-box;
	padding: 0.2rem;
	width: 100%;
}

.als-widget-row > * {
	display: inline-block; /* Hack for older browsers */
}

.als-widget-row > label {
	width: 12rem; /* Hack for older browsers */
	flex: 1 1 13rem;
	user-select: none;
}

.als-label.wrap-label { /* Will be added to the label if text length is too big */
	width: 100%;
	flex: none;
}

.als-input {
	width: 7rem; /* Hack for older browsers */
	flex: 9999 1 5rem;
}

.als-input > * {
	width: 100%;
	box-sizing: border-box;
}

.als-input > input {
	height: 1.2rem;
	padding-top: 0;
	padding-bottom: 0;
}

/* Checkbox */
.als-checkbox-wrapper {
	width: 1.2rem;
	flex: none;
}

.als-checkbox-wrapper > input:checked + .ri {
	color: var(--text-color);
	transition: color 0.2s, background 0.2s;
}

.als-checkbox-wrapper > .ri {
	display: table-cell;
	min-width: 1rem;
	width: 1rem;
	font-size: 0.9rem;
	font-weight: 700;
	margin: 0;
	padding: 0;
	color: transparent;
	transition: color 0.2s, background 0.2s;
}

/* Radio buttons */
.als-radio-group-wrapper {
	display: block;
}

.als-radio-group-wrapper > .als-widget-row { /* Parent .als-widget-row overrides display of this one, so we gotta restore it */
	display: table;
	vertical-align: middle;
	padding-left: 1rem;
}

.als-radio-group-wrapper .als-checkbox-wrapper {
	display: table-cell;
	vertical-align: middle;
}

.als-radio-group-wrapper .als-checkbox-wrapper + .als-label {
	vertical-align: middle;
}

.als-radio-group-wrapper input + .ri {
	display: table-cell;
	vertical-align: middle;
	border-radius: 100%;
}

.als-radio-label-wrapper > .ri {
	margin-left: 1rem;
}

/* Number input */
.als-number {
	display: flex;
	flex-flow: row;
}

.als-number > input {
	vertical-align: middle;
	width: 4rem; /* Hack for older browsers */
	flex: 1 1;
}

.als-divicon .als-number > input {
	width: 2rem; /* Hack for older browsers */
}

.als-number > .ri {
	min-width: 1.2rem;
	max-width: 1.2rem;
	min-height: 1.2rem;
	height: 1.2rem;
	font-size: 1rem;
	font-weight: 700;
	line-height: 1.2rem;
	padding: 0;
}

.als-number > * {
	border-right: none;
}

.als-number > *:last-child {
	border-right: var(--border);
}

/* Single button */
.als-buttons-wrapper {
	display: table;
	width: 100%;
}

.als-buttons-wrapper .als-button-base {
	display: table-cell;
	height: 2rem;
}

/* Buttons group */
.als-buttons-group-wrapper {
	justify-content: stretch;
	padding: 0;
}

.als-buttons-group-wrapper .als-widget-row {
	width: 100%;
	flex: 1 1 6rem;
	height: auto;
	align-self: stretch;
}

.als-buttons-group-wrapper .als-input {
	width: 100%;
	max-width: 100%;
	height: 100%;
	box-sizing: border-box;
}

.als-buttons-group-wrapper .als-icon-button-container {
	flex: 0 0 2rem;
}

/* Divider */
.als-divider {
	height: 1px;
	margin: 0.2rem;
	border: none;
	padding: 0;
	background: var(--divider-color); /* For browsers that does not support gradients */
	background: linear-gradient(90deg, transparent 5%, var(--divider-color) 25%, var(--divider-color) 75%, transparent 95%);
}

/* WidgetLayer */

.als-divicon-container {
	border: none;
	background: none;
}

.als-divicon {
	font-size: 0.75rem;
	background: var(--background);
	border: var(--border);
	width: 12rem;
}

.als-divicon-container .nostyle {
	border: none;
	padding: 0;
}

.als-divicon-container .nostyle > * {
	padding: 0;
}

.als-divicon-container .nostyle .als-simple-label {
	border: var(--border);
	padding: 0 0.1rem;
}

.als-divicon > .als-widget-row {
	display: flex;
	flex-flow: row;
}

.als-divicon input, .als-divicon select {
	font-size: 0.75rem;
}

.als-divicon > .als-widget-row > label {
	width: 60%;
	margin: 0;
	flex: 1 1 6rem;
}

.als-divicon > .als-widget-row > .als-input {
	width: 40%;
	flex: 9999 1 4rem;
}

.als-divicon-pos-center {
	transform: translate(-50%, -50%);
}

.als-divicon-pos-leftCenter {
	transform: translateY(-50%);
}

.als-divicon-pos-rightCenter {
	transform: translate(-100%, -50%);
}

.als-divicon-pos-topCenter {
	transform: translateX(-50%);
}

.als-divicon-pos-topRight {
	transform: translateX(-100%);
}

.als-divicon-pos-bottomLeft {
	transform: translateY(-100%);
}

.als-divicon-pos-bottomCenter {
	transform: translate(-50%, -100%);
}

.als-divicon-pos-bottomRight {
	transform: translate(-100%, -100%);
}

/* SimpleLabel */

.als-simple-label-wrapper {
	width: 100%;
}

.als-simple-label {
	flex: 99999999999999;
}

.als-simple-label.error {
	padding: 0.2rem;
	background: var(--error-bg);
	border: 1px solid var(--error-border);
}

.als-simple-label.message {
	padding: 0.2rem;
	background: var(--message-bg);
	border: 1px solid var(--message-border);
}
/* ... */

